# NTPU-GDG-Dify-ChatBot

./: .dockerignore  .env.example  .gitignore  .semgrepignore  Dockerfile  LICENSE  NOTICE  README.md  conftest.py  main.py  manage.py  pyproject.toml  pytest.ini  requirements.txt  sccshoollaw.py  upload_files.py
.github/: dependabot.yml
.github/workflows/: check-secrets.yml  lint.yml  sast.yml  test.yml
apps/accounts/: adapters.py  admin.py  authentication.py  exceptions.py  views.py  views_token_refresh.py
apps/accounts/migrations/: 0001_initial.py
apps/accounts/models/: __init__.py  user.py
apps/accounts/tests/: test_auth_flow.py
apps/chat/: admin.py  serializers.py  views.py
apps/chat/migrations/: 0001_initial.py  0002_chat_user.py  0003_chatsession_chatmessage_delete_chat.py  0004_chatsession_dify_conversation_id.py
apps/chat/models/: __init__.py  message.py  session.py
apps/chat/services/: dify.py
config/: urls.py
config/settings/: base.py  development.py  production.py  test.py
frontend/Dify-ChatBot-V2/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/Dify-ChatBot-V2/src/: App.tsx  index.css
frontend/Dify-ChatBot-V2/src/components/: ChatInput.tsx  ChatMessage.tsx  ChatSidebar.tsx  Header.tsx  LoginButton.tsx  ProtectedRoute.tsx
frontend/Dify-ChatBot-V2/src/contexts/: AuthContext.tsx
frontend/Dify-ChatBot-V2/src/lib/: fetchWithTimeout.ts  sanitize.ts
staticfiles/: staticfiles.json
tests/: test_path_traversal.py
tests/e2e/: test_chat_flow.py  test_login_flow.py
(+15 files in other folders)
